2009-10-28  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Ada Chan.

        Add accessibility test to the list of Windows Skipped tests.

        * platform/win/Skipped:

2009-10-28  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Jan Alonzo.

        [GTK] API to start inspector for a WebView
        https://bugs.webkit.org/show_bug.cgi?id=22551

        Unskip inspector tests that we are now able to run.

        * platform/gtk/Skipped:

2009-10-28  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [GTK] Fails new test fast/js/navigator-language.html
        https://bugs.webkit.org/show_bug.cgi?id=30440

        Unskip the test that now passes.

        * platform/gtk/Skipped:

2009-10-28  Jonathan Dixon  <joth@chromium.org>

        Reviewed by Eric Seidel.

        Bug 30547: (Chromium) searchbox not rendered properly due to the css property -webkit-border-radius
        https://bugs.webkit.org/show_bug.cgi?id=30547

        * fast/css/text-input-with-webkit-border-radius-expected.checksum: Added.
        * fast/css/text-input-with-webkit-border-radius-expected.png: Added.
        * fast/css/text-input-with-webkit-border-radius-expected.txt: Added.
        * fast/css/text-input-with-webkit-border-radius.html: Added.

2009-10-27  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        Provide a way to get counter values with layoutTestContoller
        https://bugs.webkit.org/show_bug.cgi?id=30555

        Convert two pixel tests to dumpAsText tests using counterValueForElementById.

        * fast/css/counters/t1204-increment-00-c-o-expected.txt: Added.
        * fast/css/counters/t1204-increment-00-c-o.html:
        * fast/css/counters/t1204-increment-01-c-o-expected.txt: Added.
        * fast/css/counters/t1204-increment-01-c-o.html:
        * platform/mac/fast/css/counters/t1204-increment-00-c-o-expected.checksum: Removed.